welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: not found: value estSurBicuit
    while (!estSurBicuit()) {
            ^